[gd_scene load_steps=6 format=3 uid="uid://55ipv7ij7bcg"]

[ext_resource type="Script" path="res://scripts/turret_parent.gd" id="1_weacm"]
[ext_resource type="AudioStream" uid="uid://b3bmtyrhcg1ql" path="res://assets/audio/sfx/080877_bullet-39803.mp3" id="2_53j1g"]
[ext_resource type="AudioStream" uid="uid://b6ri0nenfcyy2" path="res://assets/audio/sfx/080880_bullet-39799.mp3" id="4_k8twk"]
[ext_resource type="AudioStream" uid="uid://cpbktccmqkqhx" path="res://assets/audio/sfx/080977_bullet-39804.mp3" id="5_2vxqf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p56l4"]

[node name="Turret" type="StaticBody3D"]
script = ExtResource("1_weacm")

[node name="BulletSfx" type="Node" parent="."]

[node name="BulletSfx1" type="AudioStreamPlayer" parent="BulletSfx"]
stream = ExtResource("2_53j1g")
bus = &"Effect"

[node name="BulletSfx2" type="AudioStreamPlayer" parent="BulletSfx"]
stream = ExtResource("4_k8twk")
bus = &"Effect"

[node name="BulletSfx3" type="AudioStreamPlayer" parent="BulletSfx"]
stream = ExtResource("5_2vxqf")
bus = &"Effect"

[node name="BlockGridCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_p56l4")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1.00372, 0, 0, 0, 1.00372, 0, 0, 0, 1.00372, 0, 0.324204, 0)
visible = false
target_position = Vector3(0, 0, -10)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="AttackSpeed" type="Timer" parent="."]
one_shot = true

[node name="Head" type="Node3D" parent="."]

[node name="ProjectileSpawn" type="Marker3D" parent="Head"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.334663, -0.905763)
visible = false

[node name="Body" type="Node3D" parent="."]

[node name="Range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Range"]
visible = false

[node name="VisibleRange" type="MeshInstance3D" parent="Range"]
visible = false

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
